# FubNer

./: CMakeLists.txt  README.md  key.pub  main  run.sh
include/: fibonacci  fibonacci.hpp
src/: fibonacci.cpp  main.cpp
